test/errors/types/tuple_arity_mismatch_fail.hy
int main()
{
    (int, string) bad = (1, "hi", "extra")
    return 0
}
